--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - TAVILY_API_KEY=${TAVILY_API_KEY}
     volumes:
       - ./logs:/app/logs
+    command: >
+      sh -c "pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt && uvicorn app:app --host 0.0.0.0 --port 8080"
     #network_mode: host
     
     # Если нужно GPU
